Fixed: SelectInput: Wrap long option text

--- a/src/styles/themes/proton/inputs.styl
+++ b/src/styles/themes/proton/inputs.styl
@@ -225,15 +225,14 @@
   box-sizing: content-box
   display: flex
   align-items: center
+  padding: 5px 0
   font-size: rem(14)
   font-weight: 600
   color: var(--color, var(--toolbar-fg))
   transition: color var(--d-fast)
   flex-shrink: 0
-  line-height: 30px
-  overflow: hidden
+  line-height: 20px
   opacity: .7
-  white-space: nowrap
   cursor: pointer
   &:before
     content: ''
@@ -251,9 +250,6 @@
     display: block
     padding: 0 8px
     margin: 0
-    overflow: hidden
-    text-overflow: ellipsis
-    white-space: nowrap
   > svg
   > img
     position: relative
@@ -262,7 +258,7 @@
     display: block
     width: 16px
     height: 16px
-    padding: 7px
+    padding: 2px 7px
     fill: var(--color, var(--toolbar-fg))
     transition: opacity var(--d-fast)
   > svg + p
@@ -279,14 +275,20 @@
   .SelectInput .opt
   .select-input-drop-down .opt
     font-size: rem(14)
+    overflow: hidden
+    > p
+      overflow: hidden
+      text-overflow: ellipsis
+      white-space: nowrap
   .SelectInput .opt > svg
-    padding: 5px
+    padding: 2px 5px
   .ToggleInput .opt.-true
     position: absolute
     top: 2px
     left: 3px
     width: 12px
     height: 14px
+    padding: 0
     &:before
       background-color: var(--accent)
       border-radius: 3px
@@ -299,6 +301,7 @@
     height: 9px
     top: 1px
     left: 7px
+    padding: 0
     box-shadow: 1.5px 1.5px 0 0 var(--toolbar-bg)
     transform: rotateZ(45deg)
     &:before
